traefik3/6_https_tls/traefik-tls-service.yml
# 代理443端口的service
apiVersion: v1
kind: Service
metadata:
  name: traefik-tls-service
spec:
  type: LoadBalancer
  ports:
    - targetPort: websecure
      port: 443
      nodePort: 30443 # 指定一个端口
  selector:
    app: traefik
