traefik3/6_https_tls/tls-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tls-ingressroute
  namespace: default
spec:
  tls:
    secretName: traefik-secret-tls 
  entryPoints:
    - websecure
  routes:
  - match: Host(`ingressroute.wtt.cn`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: web-svc
      port: 80
  - match: Host(`ingressroute.wtt.cn`) && PathPrefix(`/app`)
    kind: Rule
    services:
    - name: app-svc
      port: app
